--- a/study/study/study.vcxproj
+++ b/study/study/study.vcxproj
@@ -139,6 +139,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="10773.cpp" />
+    <ClCompile Include="14888.cpp" />
     <ClCompile Include="4344.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
