--- a/study/study/study.vcxproj.filters
+++ b/study/study/study.vcxproj.filters
@@ -18,5 +18,11 @@
     <ClCompile Include="4344.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="14888.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="10773.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
