4949 균형잡힌 세상

--- a/study/study/study.vcxproj
+++ b/study/study/study.vcxproj
@@ -142,6 +142,7 @@
     <ClCompile Include="10773.cpp" />
     <ClCompile Include="14888.cpp" />
     <ClCompile Include="4344.cpp" />
+    <ClCompile Include="4949.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
