--- a/study/study/study.vcxproj
+++ b/study/study/study.vcxproj
@@ -141,6 +141,7 @@
   <ItemGroup>
     <ClCompile Include="10773.cpp" />
     <ClCompile Include="14888.cpp" />
+    <ClCompile Include="1874.cpp" />
     <ClCompile Include="4344.cpp" />
     <ClCompile Include="4949.cpp" />
   </ItemGroup>
