--- a/study/study/study.vcxproj.filters
+++ b/study/study/study.vcxproj.filters
@@ -30,5 +30,8 @@
     <ClCompile Include="1874.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="17298.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
