--- a/study/study/study.vcxproj
+++ b/study/study/study.vcxproj
@@ -141,10 +141,13 @@
   <ItemGroup>
     <ClCompile Include="10773.cpp" />
     <ClCompile Include="14888.cpp" />
-    <ClCompile Include="17298.cpp" />
+    <ClCompile Include="17298.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+    </ClCompile>
     <ClCompile Include="1874.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
     </ClCompile>
+    <ClCompile Include="2164.cpp" />
     <ClCompile Include="4344.cpp" />
     <ClCompile Include="4949.cpp" />
   </ItemGroup>
