--- a/study/study/study.vcxproj.filters
+++ b/study/study/study.vcxproj.filters
@@ -13,6 +13,9 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="소스 파일\queue">
+      <UniqueIdentifier>{4e5d1806-27a1-443a-b89d-0704ed1af339}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="4344.cpp">
@@ -32,6 +35,9 @@
     </ClCompile>
     <ClCompile Include="17298.cpp">
       <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="2164.cpp">
+      <Filter>소스 파일\queue</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
