11866 조세퍼스 문제 0

--- a/study/study/study.vcxproj.filters
+++ b/study/study/study.vcxproj.filters
@@ -39,5 +39,8 @@
     <ClCompile Include="2164.cpp">
       <Filter>소스 파일\queue</Filter>
     </ClCompile>
+    <ClCompile Include="11866.cpp">
+      <Filter>소스 파일\queue</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
