--- a/study/queue/queue.vcxproj.filters
+++ b/study/queue/queue.vcxproj.filters
@@ -15,22 +15,19 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="4344.cpp">
+    <ClCompile Include="..\study\2164.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="14888.cpp">
+    <ClCompile Include="..\study\11866.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="10773.cpp">
+    <ClCompile Include="1966.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="4949.cpp">
+    <ClCompile Include="2164.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="1874.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="17298.cpp">
+    <ClCompile Include="11866.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
