--- a/study/queue/queue.vcxproj.filters
+++ b/study/queue/queue.vcxproj.filters
@@ -15,12 +15,6 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\study\2164.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="..\study\11866.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
     <ClCompile Include="1966.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
@@ -28,6 +22,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="11866.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="1021.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
