--- a/study/DP/DP.vcxproj.filters
+++ b/study/DP/DP.vcxproj.filters
@@ -27,5 +27,8 @@
     <ClCompile Include="1904.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="2579.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
