--- a/study/BFS/BFS.vcxproj
+++ b/study/BFS/BFS.vcxproj
@@ -20,9 +20,9 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{7465FBBD-65D8-4E8D-80EA-7484CA04E0E5}</ProjectGuid>
+    <ProjectGuid>{07681457-C43C-4EFB-9380-DFD6EC524F63}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>DFS</RootNamespace>
+    <RootNamespace>BFS</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -139,9 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="1012.cpp">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
-    </ClCompile>
+    <ClCompile Include="2644.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
