--- a/study/BFS/BFS.vcxproj.filters
+++ b/study/BFS/BFS.vcxproj.filters
@@ -21,5 +21,8 @@
     <ClCompile Include="1260.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="2606.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
